@@ -17,28 +17,26 @@ package org.primeframework.mvc.test;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-
-import org.testng.annotations.Test;
-import org.testng.reporters.Files;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.testng.annotations.Test;
+import org.testng.reporters.Files;
 
 /**
  * @author Daniel DeGroff
  */
 public class RequestResultTest {
-  @Test(enabled = false)
-  public void keys() throws IOException {
-    Path jsonFile1 = Paths.get("src/test/resources/json/SortedJSONKeys1.json");
-    Path jsonFile2 = Paths.get("src/test/resources/json/SortedJSONKeys2.json");
+  @Test
+  public void arrays() throws IOException {
+    Path jsonFile1 = Path.of("src/test/resources/json/SortedJSONArrays1.json");
+    Path jsonFile2 = Path.of("src/test/resources/json/SortedJSONArrays2.json");
     RequestResult.assertJSONEquals(new ObjectMapper(), Files.readFile(jsonFile1.toFile()), Files.readFile(jsonFile2.toFile()));
   }
 
-  @Test
-  public void arrays() throws IOException {
-    Path jsonFile1 = Paths.get("src/test/resources/json/SortedJSONArrays1.json");
-    Path jsonFile2 = Paths.get("src/test/resources/json/SortedJSONArrays2.json");
+  @Test(enabled = false)
+  public void keys() throws IOException {
+    Path jsonFile1 = Path.of("src/test/resources/json/SortedJSONKeys1.json");
+    Path jsonFile2 = Path.of("src/test/resources/json/SortedJSONKeys2.json");
     RequestResult.assertJSONEquals(new ObjectMapper(), Files.readFile(jsonFile1.toFile()), Files.readFile(jsonFile2.toFile()));
   }
 }
